<resources>
    <string name="app_name">haggle_x</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">app_logo</string>
    <string name="hagglex">HaggleX</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email Address</string>
    <string name="password_min_8_characters">Password (Min. 8 characters)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="new_user_create_a_new_account">New User? Create a new Account</string>
    <string name="back_button">back button</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_a_username">Create a username</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="by_signing_you_agree_to_hagglex_terms_and_privacy_policy">By signing, you agree to HaggleX terms and privacy policy.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="image_dsc">image dsc</string>
    <string name="we_just_sent_a">We just sent a verification code to your email.\n Please enter the code</string>
    <string name="verification_code">Verification code</string>
    <string name="verify_me">VERIFY ME</string>
    <string name="this_code_will_expire_in_10_minutes">This code will expire in 10 minutes</string>
    <string name="resend_code">Resend Code</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="thank_you_for_setting_up_your_hagglex_account">Thank you for setting up your HaggleX account</string>
    <string name="start_exploring">start exploring</string>
    <string name="sv">SV</string>
    <string name="notify_icon">notify_icon</string>
    <string name="_5">5</string>
    <string name="total_portfolio_balance">Total portfolio balance</string>
    <string name="dollar_hidden">$****</string>
    <string name="otcimageview">otcImageView</string>
    <string name="markets">Markets</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="more">more</string>
    <string name="cryptosave">CryptoSave</string>
    <string name="do_more_with_hagglex">Do more with HaggleX</string>
    <string name="trending_crypto_news">Trending crypto news</string>
    <string name="view_all_stories">View all stories</string>
    <string name="send_money_instantly">Send money instantly</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="dismiss">DISMISS</string>
    <string name="referral_code_optional">Referral code (optional)</string>
    <string name="logout">LOGOUT</string>
</resources>