<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.VerifyFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@drawable/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton"
            android:contentDescription="@string/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:background="@drawable/back_shape"
            android:src="@drawable/chevron_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headerText"
            app:layout_constraintStart_toStartOf="@id/backButton"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            android:text="@string/verify_your_account"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/headerText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="40dp"
                    android:src="@drawable/blue_check"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_dsc"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <TextView
                    android:text="@string/we_just_sent_a"
                    android:layout_margin="24dp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/regular"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <EditText
                    android:id="@+id/codeField"
                    android:textCursorDrawable="@null"
                    android:backgroundTint="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/regular"
                    android:textSize="13sp"
                    android:hint="@string/verification_code"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verifyButton"
                    android:layout_margin="30dp"
                    android:textColor="@android:color/white"
                    android:text="@string/verify_me"
                    android:fontFamily="@font/bold"
                    android:background="@drawable/gradient_blue"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/this_code_will_expire_in_10_minutes"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/resendTextView"
                    android:text="@string/resend_code"
                    android:layout_margin="24dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/bold"
                    android:textSize="13sp"
                    android:padding="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/mainLoader"
        layout="@layout/app_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</FrameLayout>