<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="120dp"
            android:layout_marginStart="24dp"
            android:text="@string/welcome"
            android:fontFamily="@font/bold"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_marginTop="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email_address"
            android:textColorHint="@android:color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/emailField"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password_min_8_characters"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/passwordField"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_marginTop="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:text="@string/forgot_password"
            android:fontFamily="@font/regular"
            android:textSize="12sp"
            android:padding="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="48dp"
            android:textColor="@android:color/black"
            android:text="@string/log_in"
            android:fontFamily="@font/bold"
            style="@style/button_gold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:text="@string/new_user_create_a_new_account"
            android:fontFamily="@font/regular"
            android:textSize="12sp"
            android:padding="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</FrameLayout>