<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SetupCompleteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_dsc"
                android:src="@drawable/gold_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/setup_complete"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/regular"
                android:text="@string/thank_you_for_setting_up_your_hagglex_account"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startButton"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="48dp"
            android:textColor="@android:color/black"
            android:text="@string/start_exploring"
            android:textAllCaps="true"
            android:fontFamily="@font/bold"
            android:background="@drawable/gold_button"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>