<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@drawable/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton"
            android:contentDescription="@string/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:background="@drawable/back_shape"
            android:src="@drawable/chevron_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/create_an_account"
                        android:fontFamily="@font/bold"
                        android:layout_marginTop="24dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_marginTop="24dp"
                        android:hint="@string/email_address"
                        android:textColorHint="@android:color/black"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/emailField"
                            android:textSize="12sp"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_marginTop="24dp"
                        android:hint="@string/password_min_8_characters"
                        android:textColorHint="@android:color/black"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/passwordField"
                            android:textSize="12sp"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userNameLayout"
                        android:layout_marginTop="24dp"
                        android:hint="@string/create_a_username"
                        android:textColorHint="@android:color/black"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/userNameField"
                            android:textSize="12sp"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="24dp"
                        android:layout_height="wrap_content">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccPicker"
                            app:ccp_textSize="12sp"
                            android:padding="2dp"
                            app:layout_constraintBottom_toBottomOf="@id/phoneLayout"
                            app:layout_constraintTop_toTopOf="@id/phoneLayout"
                            app:layout_constraintStart_toStartOf="parent"
                            android:background="@drawable/picker_background"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_autoFormatNumber="true"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phoneLayout"
                            android:hint="@string/enter_your_phone_number"
                            android:textColorHint="@android:color/black"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/ccPicker"
                            android:layout_height="wrap_content">


                            <EditText
                                android:id="@+id/phoneField"
                                android:textSize="12sp"
                                android:inputType="phone"
                                android:textColor="@android:color/black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/referralLayout"
                        android:layout_marginTop="24dp"
                        android:hint="Referral code (optional)"
                        android:textColorHint="#D78E8787"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/referralField"
                            android:textSize="12sp"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:text="@string/by_signing_you_agree_to_hagglex_terms_and_privacy_policy"
                        android:fontFamily="@font/regular"
                        android:layout_marginTop="24dp"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/signButton"
                        android:layout_marginTop="24dp"
                        android:textColor="@android:color/white"
                        android:text="@string/sign_up"
                        android:fontFamily="@font/bold"
                        style="@style/button_blue"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>